@@ -5,6 +5,10 @@ Dear Emacs, please make this -*-Text-*- mode!
 Changes for version 0.0-77
 --------------------------
  
+* change in dnd, icons to avoid using "Namespce" functions
+
+* put back tag code into gtext
+
 * fix to gdf and do.subset=TRUE. (Thanks Stephanie)
 
 * fix to font.attr argument of insert method for gtext. (Had commented
